--- a/index.html
+++ b/index.html
@@ -13,28 +13,11 @@
         <h1>Titre</h1>
     </header>
 
-
     <div id="container">
         <nav>
             <h3>MENU</h3>
         </nav>
         <main id="main">
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
 
             <article>
                 <header>
@@ -42,113 +25,15 @@
                 </header>
                 <main>
                     <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
+                        <li><a href="./flexbox/page1.html">Flexbox</a></li>
+                        <li><a href="./position/page1.html">Position</a></li>
+                        <li><a href="./HTML/page1.html">HTML</a></li>
                     </ul>
                 </main>
                 <footer>
                     <h6>footer article</h6>
                 </footer>
             </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-
 
         </main>
         <footer>
