--- a/HTML/page1.html
+++ b/HTML/page1.html
@@ -4,11 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="./flexbox.css" rel="stylesheet">
+    <title>Flexbox</title>
 </head>
 
 <body>
-
+    <h1>flexbox</h1>
+    <div class="container">
+        <div class="boxes">
+            <div class="Box1">
+                <p>Box1</p>
+            </div>
+            <div class="Box2">
+                <p>Box2</p>
+            </div>
+            <div class="Box3">
+                <p>Box3</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
