--- a/flexbox/page1.html
+++ b/flexbox/page1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="./flexbox.css" rel="stylesheet">
     <title> FlexBox </title>
 </head>
 
@@ -16,7 +16,9 @@
 
     <div id="container">
         <nav>
-            <h3>MENU</h3>
+            <h3>
+                <a href="../CSS/style.css">home</a>
+            </h3>
         </nav>
         <main id="main">
             <article>
