--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
         <h1>Titre</h1>
     </header>
     <div id="container">
-        <nav>
-            <h3>MENU</h3>
-        </nav>
         <main id="main">
-            <ul>
+            <ul class="main__ul--a">
                 <li><a href="./flexbox/page1.html">Flexbox</a></li>
                 <li><a href="./position/page1.html">Position</a></li>
                 <li><a href="./HTML/page1.html">HTML</a></li>
