--- a/HTML/page1.html
+++ b/HTML/page1.html
@@ -11,14 +11,25 @@
 <body>
     <h1>flexbox</h1>
     <div class="container">
-        <div class="boxes">
-            <div class="Box1">
+        <div class="boxes1">
+            <div class="boxes Box1">
                 <p>Box1</p>
             </div>
-            <div class="Box2">
+            <div class="boxes Box2">
                 <p>Box2</p>
             </div>
-            <div class="Box3">
+            <div class="boxes Box3">
+                <p>Box3</p>
+            </div>
+        </div>
+        <div class="boxes2">
+            <div class="boxes Box4">
+                <p>Box1</p>
+            </div>
+            <div class="boxes Box5">
+                <p>Box2</p>
+            </div>
+            <div class="boxes Box6">
                 <p>Box3</p>
             </div>
         </div>
