--- a/position/page1.html
+++ b/position/page1.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./flexbox.css" rel="stylesheet">
-    <title>Flexbox</title>
+    <link href="./position.css" rel="stylesheet">
+    <title>position</title>
 
 </head>
 
 <body>
-    <h1>flexbox</h1><a href="../index.html">home</a>
+    <h1>position</h1> <a href="../index.html">home</a>
     <div class="container">
         <div class="boxes1">
             <div class="boxes Box1">
