--- a/HTML/page1.html
+++ b/HTML/page1.html
@@ -1,39 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./flexbox.css" rel="stylesheet">
-    <title>Flexbox</title>
-</head>
+    <link href="./HTML.css" rel="stylesheet">
+    <title> FlexBox </title>
 
 <body>
-    <h1>flexbox</h1>
-    <div class="container">
-        <div class="boxes1">
-            <div class="boxes Box1">
-                <p>Box1</p>
-            </div>
-            <div class="boxes Box2">
-                <p>Box2</p>
-            </div>
-            <div class="boxes Box3">
-                <p>Box3</p>
-            </div>
-        </div>
-        <div class="boxes2">
-            <div class="boxes Box4">
-                <p>Box1</p>
-            </div>
-            <div class="boxes Box5">
-                <p>Box2</p>
-            </div>
-            <div class="boxes Box6">
-                <p>Box3</p>
-            </div>
-        </div>
+    <header>
+        <h1>FlexBox</h1><a href="../index.html">home</a>
+    </header>
+
+
+    <div id="container">
+
+        <main id="main">
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+            <article>
+                <header>
+                    <h2>Titre article</h2>
+                </header>
+                <main>
+                    <ul>
+                        <li>Ligne 1</li>
+                        <li>Ligne 2</li>
+                        <li>Ligne 3</li>
+                        <li>Ligne 4</li>
+                    </ul>
+                </main>
+                <footer>
+                    <h6>footer article</h6>
+                </footer>
+            </article>
+
+
+        </main>
+        <footer>
+        </footer>
     </div>
+
 </body>
 
 </html>
