--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./CSS/style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Révisions perso</title>
 </head>
 
 <body>
     <header>
-        <h1>Titre</h1>
+        <h1>Révisions perso</h1>
     </header>
     <div id="container">
         <main id="main">
