--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./CSS/reset.css" rel="stylesheet">
     <link href="./CSS/style.css" rel="stylesheet">
+
     <title>Révisions perso</title>
 </head>
 
@@ -15,9 +17,11 @@
     <div id="container">
         <main id="main">
             <ul class="main__ul--a">
+                <li><a href="./templates/templates.html">templates</a></li>
                 <li><a href="./flexbox/page1.html">Flexbox</a></li>
                 <li><a href="./position/page1.html">Position</a></li>
                 <li><a href="./HTML/page1.html">HTML</a></li>
+
             </ul>
         </main>
         <footer>
