--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <div id="container">
         <main id="main">
             <ul class="main__ul--a">
+
                 <li><a href="./templates/templates.html">templates</a></li>
                 <li><a href="./flexbox/page1.html">Flexbox</a></li>
                 <li><a href="./position/page1.html">Position</a></li>
                 <li><a href="./HTML/page1.html">HTML</a></li>
+                <li><a href="./grid/grid.html">GRID</a></li>
 
             </ul>
         </main>
