--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="./CSS/reset.css" rel="stylesheet">
     <link href="./CSS/style.css" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+
     <title>Révisions perso</title>
 </head>
 
@@ -23,8 +25,11 @@
                 <li><a href="./position/page1.html">Position</a></li>
                 <li><a href="./HTML/page1.html">HTML</a></li>
                 <li><a href="./grid/grid.html">GRID</a></li>
+                <li><a href="./effets/effets.html">effets</a></li>
+
 
             </ul>
+
         </main>
         <footer>
         </footer>
