--- a/grid/grid.html
+++ b/grid/grid.html
@@ -4,48 +4,214 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="./grid.css">
+    <link href="../CSS/reset.css" rel="stylesheet">
+    <link href="./grid.css" rel="stylesheet">
     <title>Revisions GRID</title>
 </head>
 
-<h1>GRID</h1><a href="../index.html">home</a>
-
-<main>
-    <div class="container">
-        <div class="box01">
-            <h4>box01</h4>
-        </div>
-        <div class="box02">
-            <h4>box02</h4>
-        </div>
-        <div class="box03">
-            <h4>box03</h4>
-        </div>
-        <div class="box04">
-            <h4>box04</h4>
-        </div>
-        <div class="box05">
-            <h4>box05</h4>
-        </div>
-        <div class="box06">
-            <h4>box06</h4>
-        </div>
-        <div class="box07">
-            <h4>box07</h4>
-        </div>
-        <div class="box08">
-            <h4>box08</h4>
-        </div>
-        <div class="box09">
-            <h4>box09</h4>
-        </div>
-    </div>
-</main>
-
 <body>
+    <header>
+        <h1>GRID</h1>
+        <nav>
+            <ul>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="../index.html">HOME</a>
+            </li><li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+        <main class="main">
+            <article class="main__article" id="lesrows">
+                <header class="main__article--header">
+                    <h2>Les GRID en row</h2>
+                    <p>lesRows</p></header>
+                
+                <section class="main__article--section">     
+                            <div class="boxes box01">
+                                <h4>box01</h4>
+                            </div>
+                            <div class="boxes box02">
+                                <h4>box02</h4>
+                            </div>
+                            <div class="boxes box03">
+                                <h4>box03</h4>
+                            </div>
+                            <div class="boxes box04">
+                                <h4>box04</h4>
+                            </div>
+                            <div class="boxes box05">
+                                <h4>box05</h4>
+                            </div>
+                            <div class="boxes box06">
+                                <h4>box06</h4>
+                            </div>
+                </section>
+                <footer class="main__article--footer">
+                    <p>Publié le 05 Octobre 2024</p>
+                </footer>
+            </article>
+            <article class="main__article" id="lescolumns">
+                <header class="main__article--header">
+                    <h2>Les GRID en column</h2>
+                    <p>Sous-titre de l'article</p>
+                </header>
+                <section class="main__article--section">     
+
+                            <div class="boxes box01">
+                                <h4>box01</h4>
+                            </div>
+                            <div class="boxes box02">
+                                <h4>box02</h4>
+                            </div>
+                            <div class="boxes box03">
+                                <h4>box03</h4>
+                            </div>
+                            <div class="boxes box04">
+                                <h4>box04</h4>
+                            </div>
+                            <div class="boxes box05">
+                                <h4>box05</h4>
+                            </div>
+                            <div class="boxes box06">
+                                <h4>box06</h4>
+                            </div>
 
 
+                </section>
+                <footer class="main__article--footer">
+                    <p>Publié le 05 Octobre 2024</p>
+                </footer>
+            </article>
+            <article class="main__article" id="boite 3">
+                <header class="main__article--header">
+                    <h2>Les GRID boite 3</h2>
+                    <p>Sous-titre de l'article</p>
+                </header>
+                <section class="main__article--section">     
+
+                            <div class="boxes box01">
+                                <h4>box01</h4>
+                            </div>
+                            <div class="boxes box02">
+                                <h4>box02</h4>
+                            </div>
+                            <div class="boxes box03">
+                                <h4>box03</h4>
+                            </div>
+                            <div class="boxes box04">
+                                <h4>box04</h4>
+                            </div>
+                            <div class="boxes box05">
+                                <h4>box05</h4>
+                            </div>
+                            <div class="boxes box06">
+                                <h4>box06</h4>
+                            </div>
+                            <div class="boxes box07">
+                                <h4>box07</h4>
+                            </div>
+                            <div class="boxes box08">
+                                <h4>box08</h4>
+                            </div>
+                            <div class="boxes box09">
+                                <h4>box09</h4>
+                            </div>
+
+                </section>
+                <footer class="main__article--footer">
+                    <p>Publié le 05 Octobre 2024</p>
+                </footer>
+            </article>
+            <article class="main__article" id="boite 4">
+                <header class="main__article--header">
+                    <h2>Les GRID boite 4</h2>
+                    <p>Sous-titre de l'article</p>
+                </header>
+                <section class="main__article--section">     
+
+                            <div class="boxes box01">
+                                <h4>box01</h4>
+                            </div>
+                            <div class="boxes box02">
+                                <h4>box02</h4>
+                            </div>
+                            <div class="boxes box03">
+                                <h4>box03</h4>
+                            </div>
+                            <div class="boxes box04">
+                                <h4>box04</h4>
+                            </div>
+                            <div class="boxes box05">
+                                <h4>box05</h4>
+                            </div>
+                            <div class="boxes box06">
+                                <h4>box06</h4>
+                            </div>
+                            <div class="boxes box07">
+                                <h4>box07</h4>
+                            </div>
+                            <div class="boxes box08">
+                                <h4>box08</h4>
+                            </div>
+                            <div class="boxes box09">
+                                <h4>box09</h4>
+                            </div>
+
+                </section>
+                <footer class="main__article--footer">
+                    <p>Publié le 05 Octobre 2024</p>
+                </footer>
+            </article>
+            <article class="main__article" id="boite 5">
+                <header class="main__article--header">
+                    <h2>Les GRID boite 5</h2>
+                    <p>Sous-titre de l'article</p>
+                </header>
+                <section class="main__article--section">     
+
+                            <div class="boxes box01">
+                                <h4>box01</h4>
+                            </div>
+                            <div class="boxes box02">
+                                <h4>box02</h4>
+                            </div>
+                            <div class="boxes box03">
+                                <h4>box03</h4>
+                            </div>
+                            <div class="boxes box04">
+                                <h4>box04</h4>
+                            </div>
+                            <div class="boxes box05">
+                                <h4>box05</h4>
+                            </div>
+                            <div class="boxes box06">
+                                <h4>box06</h4>
+                            </div>
+                            <div class="boxes box07">
+                                <h4>box07</h4>
+                            </div>
+                            <div class="boxes box08">
+                                <h4>box08</h4>
+                            </div>
+                            <div class="boxes box09">
+                                <h4>box09</h4>
+                            </div>
+
+                </section>
+                <footer class="main__article--footer">
+                    <p>Publié le 05 Octobre 2024</p>
+                </footer>
+            </article>
+            
+
+            <aside class="aside">
+                <h3 class="aside__h3">Informations complémentaires</h3>
+                <p>Texte de l'élément aside...</p>
+            </aside>
+        </main>
+    <footer class="footer">
+      <p>&copy; 2024 Mon site GRID. Tous droits réservés.</p>
+    </footer>
 </body>
 
 </html>
