--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./CSS/reset.css" rel="stylesheet">
     <link href="./CSS/style.css" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link type="image/x-icon" href="./favicon.ico" rel="icon">
 
     <title>Révisions perso</title>
 </head>
@@ -26,6 +26,7 @@
                 <li><a href="./HTML/page1.html">HTML</a></li>
                 <li><a href="./grid/grid.html">GRID</a></li>
                 <li><a href="./effets/effets.html">effets</a></li>
+                <li><a href="./mediaq/MediaQ.html">Media Query</a></li>
 
 
             </ul>
