--- a/grid/grid.html
+++ b/grid/grid.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <h1>GRID</h1>
-        <nav>
-            <ul>
-            <li><a href="../index.html">Accueil</a></li>
-            <li><a href="../index.html">HOME</a>
-            </li><li><a href="#">Contact</a></li>
+        <nav class="navigation">
+            <ul class="navigation__ul">
+            <li class="navigation__ul--a"><a href="../index.html">Accueil</a></li>
+            <li class="navigation__ul--a"><a href="../index.html">HOME</a></li>
+            <li class="navigation__ul--a"><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -202,7 +202,6 @@
                     <p>Publié le 05 Octobre 2024</p>
                 </footer>
             </article>
-            
 
             <aside class="aside">
                 <h3 class="aside__h3">Informations complémentaires</h3>
