--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Révisions perso</title>
 </head>
 
-<body>
+<body class="body">
     <header>
         <h1>Révisions perso</h1>
     </header>
@@ -23,7 +23,7 @@
                 <li><a href="./templates/templates.html">templates</a></li>
                 <li><a href="./flexbox/page1.html">Flexbox</a></li>
                 <li><a href="./position/page1.html">Position</a></li>
-                <li><a href="./HTML/page1.html">HTML</a></li>
+                <li><a href="./HTML/html.html">HTML</a></li>
                 <li><a href="./grid/grid.html">GRID</a></li>
                 <li><a href="./effets/effets.html">effets</a></li>
                 <li><a href="./mediaq/MediaQ.html">Media Query</a></li>
