--- a/HTML/html.html
+++ b/HTML/html.html
@@ -74,7 +74,7 @@
                         <h6>footer article</h6>
                     </footer>
                 </article>
-                <article class="section__article">
+                <article class="section__article section__article--grid">
                     <header class="article__header">
                         <h2 class="article__header--h2">Et le reste...</h2>
                     </header>
@@ -83,16 +83,15 @@
                        contenue de l'article dans un paragraphe
                     </p>
                     <h3 class="article__header--h3">les titres</h3>
-                    <h1>titre h1</h1>
-                    <h2>titre h2</h2>
-                    <h3>titre h3</h3>
+                    <div>
+                        <h1>titre h1</h1>
+                        <h2>titre h2</h2>
+                        <h3>titre h3</h3>
+                    </div>
                     <h4>titre h4</h4>
                     <h5>titre h5</h5>
                     <h6>titre h6</h6>
-                    <p class="article__header--p">
-                       contenue de l'article dans un paragraphe
-                    </p>
-        
+                           
                     <footer class="article__footer">
                         <h6>footer article</h6>
                     </footer>
